# My-Server

./: Cargo.toml  LICENSE  README.md  post.md  publish-post.sh
assets/: lv23-gd-00005.lmp  styles.css  tetris.css  tetris.html  tetris.js
src/: main.rs
templates/: base.html  index.html  posts.html
