[package]
name = "my-server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["markdown", "with-axum", "with-hyper"] }
askama_axum = { version = "0.4.0", features = ["markdown"] }
askama_hyper = { version = "0.1.0", features = ["markdown"] }
axum = "0.8.1"
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["_sqlite", "macros", "runtime-tokio-native-tls", "sqlite", "sqlx-sqlite", "time"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "full", "redirect", "tokio", "tokio-util", "tower", "trace", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
